fix alignment

--- a/kitsune/sumo/static/less/products.less
+++ b/kitsune/sumo/static/less/products.less
@@ -14,7 +14,6 @@
   font-family: 'Open Sans','Droid Arabic Naskh','Mplus Fulah',sans-serif;
   position: absolute;
   right: 0;
-  text-align: center;
   top: 0;
 
   .download-button {
